[DE190293] fix(config): update CORS configuration and same-site cookie settings