@@ -43,37 +43,29 @@ public class SecurityConfig {
     @Bean
     SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .cors(Customizer.withDefaults())
+                // Sử dụng CorsConfigurationSource bên dưới
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(auth -> auth
-                        // 1. Pre-flight request (CORS)
+                        // 1. Cho phép tất cả request OPTIONS (Preflight) đi qua không bị chặn
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
                         // 2. Các API xác thực (Auth)
-                        .requestMatchers("/auth/login", "/auth/register", "/auth/refresh", "/auth/google", "/auth/forgot-password", "/auth/verify-otp", "/auth/reset-password").permitAll()
+                        .requestMatchers("/auth/**").permitAll()
                         .requestMatchers("/uploads/**").permitAll()
 
-                        // 3. Các API Public để xem dữ liệu (Giới hạn HTTP GET)
-                        .requestMatchers(HttpMethod.GET, "/categories").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/courses").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/courses/{id}").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/courses/{id}/curriculum").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/courses/{id}/reviews").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/lessons/{lessonId}").permitAll()
-                        .requestMatchers(HttpMethod.GET,"/contests", "/contests/banner", "/contests/{contestId}").permitAll()
+                        // 3. Các API Public
+                        .requestMatchers(HttpMethod.GET, "/categories", "/courses/**", "/lessons/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/contests/**", "/rankings").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/problems").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/rankings").permitAll()
                         .requestMatchers("/online-judge/problems/practice").permitAll()
 
-                        // 4. Các API Webhook / Callback từ hệ thống bên thứ 3
+                        // 4. Các API Webhook / Callback
                         .requestMatchers("/payment/success.html", "/payment/cancel.html", "/payment/webhook").permitAll()
-                        .requestMatchers(HttpMethod.PUT,  "/online-judge/submissions/**").permitAll()
-                        .requestMatchers(HttpMethod.PUT, "/online-judge/webhooks/**").permitAll()
-
+                        .requestMatchers(HttpMethod.PUT, "/online-judge/submissions/**", "/online-judge/webhooks/**").permitAll()
 
                         // 5. WebSocket & System
-                        .requestMatchers("/test-ws.html", "/test-ws-gen.html", "/ws/**", "/test-progress").permitAll()
-                        .requestMatchers("/error").permitAll()
+                        .requestMatchers("/test-ws.html", "/test-ws-gen.html", "/ws/**", "/test-progress", "/error").permitAll()
 
                         // 6. Tất cả các request còn lại đều yêu cầu xác thực
                         .anyRequest().authenticated()
@@ -137,18 +129,24 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Cấu hình các domain frontend được phép gọi API từ property config
+
         if (allowedOrigins != null && !allowedOrigins.isEmpty()) {
-            configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+            // Trim khoảng trắng thừa giữa các domain
+            List<String> origins = Arrays.stream(allowedOrigins.split(","))
+                    .map(String::trim)
+                    .toList();
+            configuration.setAllowedOrigins(origins);
         } else {
-            configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:5173"));
+            configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:5173", "https://nonstopcoding.io.vn", "https://www.nonstopcoding.io.vn"));
         }
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept"));
+
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        // Cho phép TẤT CẢ các header từ client gửi lên để không bị lỗi 403
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setExposedHeaders(List.of("Set-Cookie", "Authorization"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        // Áp dụng cấu hình CORS này cho toàn bộ endpoint (/**)
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
